--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -17,6 +19,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "path": "^0.12.7"
   }
 }
