--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "faker": "^4.1.0",
+    "form-data": "^2.3.3",
     "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.2",
+    "image-to-base64": "^2.0.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
@@ -21,6 +25,7 @@
     "multer-gridfs-storage": "^3.2.3",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "util": "^0.11.1"
   }
 }
