--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bcrypt": "^3.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "form-data": "^2.3.3",
     "gridfs-stream": "^1.1.1",
