--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer-gridfs-storage": "^3.2.3",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "util": "^0.11.1"
   }
